<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">GoFLight</string>
    <string name="passenger_information">Passenger Information</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="passport">Passport Number</string>
    <string name="nationality">Nationality</string>
    <string name="date_of_birth">Date of Birth (YYYY-MM-DD)</string>

    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>


    <string name="login_button_label">Login</string>
    <string name="signup_prompt">Don\'t have an account yet? Sign up now!</string>
    <string name="signup_button_label">Sign up</string>
    <string name="login_prompt">Already have an account? Log in here!</string>
    <string name="user_bookings">View All Bookings</string>
</resources>
